# sociate-circle

./: .gitignore  Cargo.toml  License.md  README.md  index.html  tailwind.config.js
css/: output.css
docs/: sociate-circle.md
src/: app.rs  main.rs  router.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/near/: mod.rs  near_accounts.rs
src/components/: markdown.rs  mod.rs
src/components/navigation/: nav.rs
src/components/posts/: create_post.rs
src/pages/: home.rs
