[package]
name = "sociate-circle-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7.2" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos-use = "0.15.5"
leptos_icons = "0.5.0"
codee = "0.3.0"
icondata = "0.5.0"
web-sys = "0.3"
pulldown-cmark = "0.12.2"
select = "0.6.0"
kuchikiki = "0.8.2"

[workspace]
members = ["src-tauri"]
